docs/api/qiskit/0.19/providers_basicaer.mdx
---
title: basicaer (v0.19)
description: API reference for qiskit.providers.basicaer in qiskit v0.19
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.providers.basicaer
---

<span id="module-qiskit.providers.basicaer" />

<span id="qiskit-providers-basicaer" />

<span id="basicaer-python-based-simulators-qiskit-providers-basicaer" />

# BasicAer: Python-based Simulators

`qiskit.providers.basicaer`

A module of Python-based quantum simulators. Simulators are accessed via the BasicAer provider, e.g.:

```python
from qiskit import BasicAer

backend = BasicAer.get_backend('qasm_simulator')
```

## Simulators

|                                                                                                                                                             |                                               |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------- |
| [`QasmSimulatorPy`](qiskit.providers.basicaer.QasmSimulatorPy "qiskit.providers.basicaer.QasmSimulatorPy")(\[configuration, provider])                      | Python implementation of a qasm simulator.    |
| [`StatevectorSimulatorPy`](qiskit.providers.basicaer.StatevectorSimulatorPy "qiskit.providers.basicaer.StatevectorSimulatorPy")(\[configuration, provider]) | Python statevector simulator.                 |
| [`UnitarySimulatorPy`](qiskit.providers.basicaer.UnitarySimulatorPy "qiskit.providers.basicaer.UnitarySimulatorPy")(\[configuration, provider])             | Python implementation of a unitary simulator. |

## Provider

|                                                                                                                                   |                                  |
| --------------------------------------------------------------------------------------------------------------------------------- | -------------------------------- |
| [`BasicAerProvider`](qiskit.providers.basicaer.BasicAerProvider "qiskit.providers.basicaer.BasicAerProvider")(\*args, \*\*kwargs) | Provider for Basic Aer backends. |

## Job Class

|                                                                                                                            |                    |
| -------------------------------------------------------------------------------------------------------------------------- | ------------------ |
| [`BasicAerJob`](qiskit.providers.basicaer.BasicAerJob "qiskit.providers.basicaer.BasicAerJob")(backend, job\_id, fn, qobj) | BasicAerJob class. |

## Exceptions

|                                                                                                                 |                                            |
| --------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
| [`BasicAerError`](qiskit.providers.basicaer.BasicAerError "qiskit.providers.basicaer.BasicAerError")(\*message) | Base class for errors raised by Basic Aer. |

